Full website SEO overhaul: rich descriptions, metadata, and cache-busting for all pages.

--- a/website/en/index.html
+++ b/website/en/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Content Scraper | Premium Telegram Tools</title>
-    <link rel="stylesheet" href="../style.css">
+    <title>Content Scraper | Professional Telegram Content Management & Automation</title>
+    <meta name="description"
+        content="Professional Telegram cloning tool with 24/7 monitoring, automated Video Note conversion, and custom button management. Scale your Telegram business instantly.">
+    <!-- Cache busting: v=3 -->
+    <link rel="stylesheet" href="../style.css?v=3">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
@@ -64,9 +67,10 @@
         </section>
 
         <section id="features" class="features">
-            <h2>Premium Features</h2>
+            <h2>Professional Features for Telegram Business</h2>
             <div class="grid">
-                <div class="card glass special-feature" style="border: 1px solid rgba(0, 255, 136, 0.3);">
+                <!-- Video Notes Support -->
+                <div class="card glass special-feature" style="border: 1px solid rgba(168, 85, 247, 0.4);">
                     <div class="icon">
                         <div class="vn-icon-container">
                             <svg viewBox="0 0 100 100" class="vn-icon-svg">
@@ -85,30 +89,51 @@
                             </svg>
                         </div>
                     </div>
-                    <h3>Video Note Support</h3>
-                    <p>Exclusive! Full support and automatic conversion of Video Notes (round videos).</p>
+                    <h3>Automated "Video Notes"</h3>
+                    <p>Exclusive technology for automatic conversion of regular videos into Telegram Video Note format
+                        (Round Video). Post content that feels personal and engaging!</p>
                 </div>
+
+                <!-- Professional Button Management -->
+                <div class="card glass" style="border: 1px solid rgba(0, 255, 136, 0.3);">
+                    <div class="icon">🕹️</div>
+                    <h3>Button Management</h3>
+                    <p>New "Custom Append" mode: ignore donor buttons and force-inject up to 3 custom buttons on every
+                        post. Perfect for "Contact Admin", "Reviews", or "CTA" links.</p>
+                </div>
+
+                <!-- 24/7 Monitoring -->
                 <div class="card glass">
                     <div class="icon">⚡</div>
-                    <h3>Real-Time Cloning</h3>
-                    <p>Instant replication of posts from donor channels to your targets with zero delay.</p>
+                    <h3>24/7 Monitoring</h3>
+                    <p>Instant post interception. The script works in real-time, cloning content faster than your
+                        competitors can even notice it.</p>
                 </div>
+
+                <!-- Media Support -->
                 <div class="card glass">
                     <div class="icon">🖼️</div>
-                    <h3>Media Support</h3>
-                    <p>Full support for Photos, Videos, Documents, Audio, and complex Media Groups (Albums).</p>
+                    <h3>Global Media Support</h3>
+                    <p>Flawless handling of Albums (Media Groups), documents, audio, and voice messages. All content is
+                        transferred with original high quality.</p>
                 </div>
+
+                <!-- ID Sniffer -->
                 <div class="card glass">
                     <div class="icon">
                         <img src="../images/demon_icon.png" alt="Sniffer" class="sniffer-icon-img">
                     </div>
                     <h3>Channel ID Sniffer</h3>
-                    <p>Intercept IDs of any private channels in real-time. Just subscribe, and you have the ID.</p>
+                    <p>Professional tool to intercept IDs of any channel, even private ones. Just subscribe, and the
+                        identifier instantly appears in your real-time log.</p>
                 </div>
+
+                <!-- Advanced Filters -->
                 <div class="card glass">
-                    <div class="icon">⚙️</div>
-                    <h3>Admin Panel</h3>
-                    <p>Manage pairs and settings directly from Telegram with a powerful inline menu.</p>
+                    <div class="icon">🪄</div>
+                    <h3>Smart Filters (Regex)</h3>
+                    <p>Deep text cleaning: remove competitor links, watermarks, and replace any text with custom rules
+                        of any complexity.</p>
                 </div>
             </div>
         </section>
