--- a/website/docs.html
+++ b/website/docs.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Документация | Content Scraper</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Документация | Content Scraper Premium - Настройка и Функции</title>
+    <meta name="description"
+        content="Полное руководство по использованию Content Scraper Premium. Настройка API, управление парами, использование Сниффера и сброс сессий.">
+    <!-- Cache busting: v=3 -->
+    <link rel="stylesheet" href="style.css?v=3">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         .doc-container {
