--- a/website/en/docs.html
+++ b/website/en/docs.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Documentation | Content Scraper</title>
-    <link rel="stylesheet" href="../style.css">
+    <title>Documentation | Content Scraper Premium - Setup & Advanced Features</title>
+    <meta name="description"
+        content="Step-by-step guide for Content Scraper Premium. Learn how to configure API keys, manage channel pairs, use the ID Sniffer, and reset sessions safely.">
+    <!-- Cache busting: v=3 -->
+    <link rel="stylesheet" href="../style.css?v=3">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         .doc-container {
@@ -224,7 +227,31 @@
         </section>
 
         <section class="doc-section">
-            <h2>6. FAQ</h2>
+            <h2>7. Account Switch and Session Reset</h2>
+            <p>If you need to change the Telegram account linked to the script or completely reset the database, follow
+                these instructions.</p>
+
+            <h3>How to Reset Session</h3>
+            <p>1. Completely turn off the script (close the terminal window).</p>
+            <p>2. Find files with the <code>.session</code> extension in the project's root folder.</p>
+            <p>3. Delete these files. The next time you start the script, it will ask for the phone number again.</p>
+
+            <h3>How to Clear Database</h3>
+            <p>The <code>database.db</code> file stores all your channel pairs, statistics, and button settings. If you
+                want to start from scratch, simply delete this file.</p>
+
+            <div class="warning-box">
+                <strong>Attention:</strong> Never delete or modify files with the <code>.py</code> extension unless you
+                are a developer. This will break the script.
+            </div>
+
+            <p>For clarity, here is how the session files look in the folder:</p>
+            <img src="../images/sessions.png" alt="Telegram Sessions"
+                style="width: 100%; max-width: 500px; border-radius: 12px; margin: 1rem 0; border: 1px solid var(--glass-border);">
+        </section>
+
+        <section class="doc-section">
+            <h2>8. FAQ</h2>
             <h3>Do I need a VPN?</h3>
             <p>If Telegram is not directly blocked in your region, no. If you run the bot from a restricted region
                 without a proxy, there may be delays.</p>
