--- a/website/en/pricing.html
+++ b/website/en/pricing.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pricing | Content Scraper</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Pricing | Content Scraper Premium Plans</title>
+    <meta name="description"
+        content="Affordable plans for professional Telegram content automation. Monthly and VIP lifetime options available. Get the best Telegram cloning tool today.">
+    <!-- Cache busting: v=3 -->
+    <link rel="stylesheet" href="../style.css?v=3">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 
