Landing Page Overhaul: Rich storytelling, use cases, and AI image prompts added.

--- a/website/en/index.html
+++ b/website/en/index.html
@@ -39,32 +39,97 @@
 
     <main>
         <section class="hero">
-            <div class="hero-image-background">
-                <img src="../images/demon_hero.png" alt="Background">
-            </div>
             <div class="hero-content">
-                <h1>Clone Telegram Channels<br><span class="gradient-text">In Real-Time</span></h1>
-                <p>The ultimate tool for content automated mirroring. Clone media, albums, and text instantly with smart
-                    modification rules.</p>
+                <h1 class="gradient-text">Content Scraper Premium</h1>
+                <p>Professional content automation for Telegram. Clone, filter, and scale your channels 24/7 with zero
+                    effort.</p>
                 <div class="hero-btns">
-                    <a href="../content-scraper-premium.zip" class="btn-primary" download>Download Now</a>
-                    <a href="docs.html" class="btn-secondary">Learn More</a>
+                    <a href="contact.html" class="btn-primary">Buy Premium Now</a>
+                    <a href="docs.html" class="btn-secondary">Documentation</a>
                 </div>
             </div>
+
             <div class="hero-visual">
-                <img src="../images/demon_hero.png" alt="Neon Demon" class="hero-main-img">
+                <div class="hero-image-background">
+                    <img src="../images/demon_icon.png" alt="Neon Demon Background">
+                </div>
                 <div class="hero-visual-overlay glass">
                     <div class="code-preview">
-                        <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
-                                class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
-                        <div class="line"><span class="c-green">// Real-time monitoring active</span></div>
-                        <div class="line"><span class="c-blue">Processing</span> message: <span
-                                class="c-orange">#4829</span></div>
-                        <div class="line">Status: <span class="c-green">Cloned ✅</span></div>
+                        <p><span class="c-purple">import</span> scraper</p>
+                        <p><span class="c-blue">bot</span> = scraper.<span class="c-yellow">PremiumBot</span>()</p>
+                        <p><span class="c-blue">bot</span>.<span class="c-yellow">start_monitoring</span>()</p>
+                        <p><span class="c-green"># Status: 24/7 Active</span></p>
+                        <p><span class="c-orange">messages_cloned:</span> 12,402</p>
+                    </div>
+                </div>
+                <!-- Main Demon Hero Image -->
+                <img src="../images/hero_demon.png" alt="Cyber Demon" class="hero-main-img">
+            </div>
+        </section>
+
+        <!-- New Professional Content Section: About -->
+        <section class="content-section">
+            <div class="info-block">
+                <div class="info-text">
+                    <h2>The Evolution of <span class="text-accent">Content Management</span></h2>
+                    <p>The world of Telegram business has changed. The days of manual post forwarding are long gone.
+                        Today, speed is the only currency that matters. If you haven't posted content within 5 seconds
+                        of the original source, you've already lost.</p>
+                    <p>Content Scraper Premium is not just a script. It's your digital twin that never sleeps, never
+                        makes mistakes, and works with Swiss watch precision. We created a tool that handles the
+                        routine, allowing you to focus on what matters most — strategy and the growth of your network.
+                    </p>
+                </div>
+                <div class="info-image-box">
+                    <img src="../images/automation_concept.png"
+                        alt="Prompt: A futuristic server room with neon purple glowing cables, a central holographic core representing AI automation, dark tech aesthetic, cinematic depth of field.">
+                </div>
+            </div>
+
+            <div class="info-block reverse">
+                <div class="info-text">
+                    <h2>Beyond Just <span class="text-accent">Copying</span></h2>
+                    <p>Ordinary bots just forward text. Our tool completely rebuilds the message. We were the first to
+                        implement exclusive technology for automatic video conversion into the "Video Notes" (Round
+                        Video) format, creating an effect of the author's live presence.</p>
+                    <p>An intelligent Regex-based filtering system cleans content of competitor links, watermarks, and
+                        ads in real-time. Your channel always stays clean and unique.</p>
+                </div>
+                <div class="info-image-box">
+                    <img src="../images/video_conversion.png"
+                        alt="Prompt: A high-tech digital processing station, a regular video file being transformed into a glowing purple sphere (video note), particles of light, sleek dark UI interface elements, neon purple highlights.">
+                </div>
+            </div>
+        </section>
+
+        <!-- New Section: Use Cases -->
+        <section class="use-cases-section">
+            <div class="content-section" style="padding-top: 0; padding-bottom: 0;">
+                <h2 style="text-align: center; font-family: 'Unbounded', sans-serif; margin-bottom: 4rem;">Who is <span
+                        class="text-accent">Premium</span> for?</h2>
+                <div class="use-cases-grid">
+                    <div class="use-case-card glass">
+                        <div class="icon">📈</div>
+                        <h3>Network Owners</h3>
+                        <p>Manage dozens of channels simultaneously. Scale your network without searching for extra
+                            content managers. One script replaces an entire department.</p>
+                    </div>
+                    <div class="use-case-card glass">
+                        <div class="icon">💰</div>
+                        <h3>Affiliate Marketers</h3>
+                        <p>Instantly create "mirrors" of popular channels to drive traffic. Automatic replacement of
+                            affiliate links and cloaking. Pure profit, no routine.</p>
+                    </div>
+                    <div class="use-case-card glass">
+                        <div class="icon">📰</div>
+                        <h3>News Aggregators</h3>
+                        <p>Be the first. The script intercepts news from private sources instantly. Filter out the noise
+                            and keep only the most important for your audience.</p>
                     </div>
                 </div>
             </div>
         </section>
+
 
         <section id="features" class="features">
             <h2>Professional Features for Telegram Business</h2>
