--- a/website/index.html
+++ b/website/index.html
@@ -38,31 +38,96 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Масштабируйте свой контент в <span>Telegram</span></h1>
-                <p>Профессиональный инструмент для автоматического клонирования каналов, обхода ограничений и глубокой
-                    аналитики контента.</p>
+                <h1 class="gradient-text">Content Scraper Premium</h1>
+                <p>Профессиональная автоматизация контента в Telegram. Клонируйте, фильтруйте и масштабируйте свои
+                    каналы 24/7 без лишних усилий.</p>
                 <div class="hero-btns">
-                    <a href="content-scraper-premium.zip" class="btn-primary" download>Начать работу</a>
+                    <a href="contact.html" class="btn-primary">Купить Premium</a>
                     <a href="docs.html" class="btn-secondary">Документация</a>
                 </div>
             </div>
+
             <div class="hero-visual">
                 <div class="hero-image-background">
-                    <img src="images/demon_hero.png" alt="Background">
+                    <img src="images/demon_icon.png" alt="Neon Demon Background">
                 </div>
-                <img src="images/demon_hero.png" alt="Neon Demon" class="hero-main-img">
                 <div class="hero-visual-overlay glass">
                     <div class="code-preview">
-                        <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
-                                class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
-                        <div class="line"><span class="c-green">// Мониторинг запущен</span></div>
-                        <div class="line"><span class="c-blue">Обработка</span> сообщения: <span
-                                class="c-orange">#4829</span></div>
-                        <div class="line">Статус: <span class="c-green">Клонировано ✅</span></div>
+                        <p><span class="c-purple">import</span> scraper</p>
+                        <p><span class="c-blue">bot</span> = scraper.<span class="c-yellow">PremiumBot</span>()</p>
+                        <p><span class="c-blue">bot</span>.<span class="c-yellow">start_monitoring</span>()</p>
+                        <p><span class="c-green"># Status: 24/7 Active</span></p>
+                        <p><span class="c-orange">messages_cloned:</span> 12,402</p>
+                    </div>
+                </div>
+                <!-- Main Demon Hero Image -->
+                <img src="images/hero_demon.png" alt="Cyber Demon" class="hero-main-img">
+            </div>
+        </section>
+
+        <!-- New Professional Content Section: About -->
+        <section class="content-section">
+            <div class="info-block">
+                <div class="info-text">
+                    <h2>Эволюция <span class="text-accent">управления контентом</span> в Telegram</h2>
+                    <p>Мир Telegram-бизнеса изменился. Времена, когда можно было пересылать посты вручную, давно прошли.
+                        Сегодня скорость — это единственная валюта, которая имеет значение. Если вы не запостили контент
+                        через 5 секунд после первоисточника, вы уже проиграли.</p>
+                    <p>Content Scraper Premium — это не просто скрипт. Это ваш цифровой двойник, который не спит, не
+                        ошибается и работает с точностью швейцарских часов. Мы создали инструмент, который берет на себя
+                        всю рутину, позволяя вам сосредоточиться на главном — стратегии и росте вашей сети.</p>
+                </div>
+                <div class="info-image-box">
+                    <img src="images/automation_concept.png"
+                        alt="Prompt: A futuristic server room with neon purple glowing cables, a central holographic core representing AI automation, dark tech aesthetic, cinematic depth of field.">
+                </div>
+            </div>
+
+            <div class="info-block reverse">
+                <div class="info-text">
+                    <h2>Больше чем просто <span class="text-accent">копирование</span></h2>
+                    <p>Обычные боты просто пересылают текст. Наш инструмент полностью пересобирает сообщение. Мы первыми
+                        внедрили эксклюзивную технологию автоматической конвертации видео в формат "Кружочков" (Video
+                        Notes), что создает эффект живого присутствия автора.</p>
+                    <p>Интеллектуальная система фильтрации на базе регулярных выражений (Regex) очищает контент от чужих
+                        ссылок, водяных знаков и рекламы конкурентов в реальном времени. Ваш канал всегда выглядит чисто
+                        и уникально.</p>
+                </div>
+                <div class="info-image-box">
+                    <img src="images/video_conversion.png"
+                        alt="Prompt: A high-tech digital processing station, a regular video file being transformed into a glowing purple sphere (video note), particles of light, sleek dark UI interface elements, neon purple highlights.">
+                </div>
+            </div>
+        </section>
+
+        <!-- New Section: Use Cases -->
+        <section class="use-cases-section">
+            <div class="content-section" style="padding-top: 0; padding-bottom: 0;">
+                <h2 style="text-align: center; font-family: 'Unbounded', sans-serif; margin-bottom: 4rem;">Для кого мы
+                    создали <span class="text-accent">Premium?</span></h2>
+                <div class="use-cases-grid">
+                    <div class="use-case-card glass">
+                        <div class="icon">📈</div>
+                        <h3>Владельцы Сетей</h3>
+                        <p>Управляйте десятками каналов одновременно. Масштабируйте свою сетку без поиска дополнительных
+                            контент-менеджеров. Один скрипт заменит целый отдел сотрудников.</p>
+                    </div>
+                    <div class="use-case-card glass">
+                        <div class="icon">💰</div>
+                        <h3>Арбитражники</h3>
+                        <p>Мгновенное создание "зеркал" популярных каналов для слива трафика. Автоматическая замена
+                            партнерских ссылок и клоакинг. Чистый профит без рутины.</p>
+                    </div>
+                    <div class="use-case-card glass">
+                        <div class="icon">📰</div>
+                        <h3>Новостные Агрегаторы</h3>
+                        <p>Будьте первым. Скрипт перехватывает новости из закрытых источников моментально. Фильтруйте
+                            мусор и оставляйте только самое важное для вашей аудитории.</p>
                     </div>
                 </div>
             </div>
         </section>
+
 
         <section id="features" class="features">
             <h2>Профессиональный функционал для Telegram-бизнеса</h2>
