Final Refinement: Fixed 'generic' themes. Added Speed/Mirror metaphors and prompts.

--- a/website/en/index.html
+++ b/website/en/index.html
@@ -71,33 +71,33 @@
         <section class="content-section">
             <div class="info-block">
                 <div class="info-text">
-                    <h2>The Evolution of <span class="text-accent">Content Management</span></h2>
-                    <p>The world of Telegram business has changed. The days of manual post forwarding are long gone.
-                        Today, speed is the only currency that matters. If you haven't posted content within 5 seconds
-                        of the original source, you've already lost.</p>
-                    <p>Content Scraper Premium is not just a script. It's your digital twin that never sleeps, never
-                        makes mistakes, and works with Swiss watch precision. We created a tool that handles the
-                        routine, allowing you to focus on what matters most — strategy and the growth of your network.
-                    </p>
+                    <h2>Speed is Your Only <span class="text-accent">Real Currency</span></h2>
+                    <p>The Telegram business world doesn't forgive the slow. If you haven't posted viral content within
+                        5 seconds of the original source, you've already handed your audience to your competitors. In
+                        this race, it's not the smartest who wins, but the fastest.</p>
+                    <p>Content Scraper Premium is your unfair advantage in this endless dash. We built a tool that works
+                        at the edge of possibility, intercepting and adapting content instantly. While others are still
+                        configuring their scripts, you're already collecting views.</p>
                 </div>
                 <div class="info-image-box">
-                    <img src="../images/automation_concept.png"
-                        alt="Prompt: A futuristic server room with neon purple glowing cables, a central holographic core representing AI automation, dark tech aesthetic, cinematic depth of field.">
+                    <img src="../images/cloning_mirror.png"
+                        alt="Prompt: Stylized oni demon mask 3D render, glowing purple neon eyes, the mask is shattering into digital pixel shards that form new masks, dark void background, cyberpunk glitch aesthetic, 16:9, hyper-detailed.">
                 </div>
             </div>
 
             <div class="info-block reverse">
                 <div class="info-text">
-                    <h2>Beyond Just <span class="text-accent">Copying</span></h2>
-                    <p>Ordinary bots just forward text. Our tool completely rebuilds the message. We were the first to
-                        implement exclusive technology for automatic video conversion into the "Video Notes" (Round
-                        Video) format, creating an effect of the author's live presence.</p>
-                    <p>An intelligent Regex-based filtering system cleans content of competitor links, watermarks, and
-                        ads in real-time. Your channel always stays clean and unique.</p>
+                    <h2>Your Ultimate <span class="text-accent">Digital Twin</span></h2>
+                    <p>Forget about routine copying. Our bot isn't just a script; it's your digital shadow that never
+                        sleeps, never asks for a salary, and never makes mistakes. It rebuilds every post, scrubbing it
+                        of traces and adding elements of "live" presence.</p>
+                    <p>Exclusive technology for instant conversion into "Video Notes" turns dry content into a personal
+                        message from the author. Your subscribers will believe you're creating this content yourself,
+                        right here, right now.</p>
                 </div>
                 <div class="info-image-box">
-                    <img src="../images/video_conversion.png"
-                        alt="Prompt: A high-tech digital processing station, a regular video file being transformed into a glowing purple sphere (video note), particles of light, sleek dark UI interface elements, neon purple highlights.">
+                    <img src="../images/digital_twin.png"
+                        alt="Prompt: A specialized retro-futuristic terminal screen showing a round video message (circle) in the center, dark theme, neon purple scanlines, silhouette of a demon in the background, cinematic lighting, synthwave vibe, 16:9.">
                 </div>
             </div>
         </section>
