--- a/website/index.html
+++ b/website/index.html
@@ -69,33 +69,33 @@
         <section class="content-section">
             <div class="info-block">
                 <div class="info-text">
-                    <h2>Эволюция <span class="text-accent">управления контентом</span> в Telegram</h2>
-                    <p>Мир Telegram-бизнеса изменился. Времена, когда можно было пересылать посты вручную, давно прошли.
-                        Сегодня скорость — это единственная валюта, которая имеет значение. Если вы не запостили контент
-                        через 5 секунд после первоисточника, вы уже проиграли.</p>
-                    <p>Content Scraper Premium — это не просто скрипт. Это ваш цифровой двойник, который не спит, не
-                        ошибается и работает с точностью швейцарских часов. Мы создали инструмент, который берет на себя
-                        всю рутину, позволяя вам сосредоточиться на главном — стратегии и росте вашей сети.</p>
+                    <h2>Скорость — это ваша единственная <span class="text-accent">валюта</span></h2>
+                    <p>Мир Telegram-бизнеса не прощает медлительности. Если вы не запостили горячий контент через 5
+                        секунд после первоисточника — вы уже отдали свою аудиторию конкурентам. В этой гонке выигрывает
+                        не тот, кто умнее, а тот, кто быстрее.</p>
+                    <p>Content Scraper Premium — это ваша фора в бесконечном забеге. Мы создали инструмент, который
+                        работает на грани возможного, перехватывая и адаптируя контент мгновенно. Пока другие
+                        настраивают свои скрипты, вы уже собираете просмотры.</p>
                 </div>
                 <div class="info-image-box">
-                    <img src="images/automation_concept.png"
-                        alt="Prompt: A futuristic server room with neon purple glowing cables, a central holographic core representing AI automation, dark tech aesthetic, cinematic depth of field.">
+                    <img src="images/cloning_mirror.png"
+                        alt="Prompt: Stylized oni demon mask 3D render, glowing purple neon eyes, the mask is shattering into digital pixel shards that form new masks, dark void background, cyberpunk glitch aesthetic, 16:9, hyper-detailed.">
                 </div>
             </div>
 
             <div class="info-block reverse">
                 <div class="info-text">
-                    <h2>Больше чем просто <span class="text-accent">копирование</span></h2>
-                    <p>Обычные боты просто пересылают текст. Наш инструмент полностью пересобирает сообщение. Мы первыми
-                        внедрили эксклюзивную технологию автоматической конвертации видео в формат "Кружочков" (Video
-                        Notes), что создает эффект живого присутствия автора.</p>
-                    <p>Интеллектуальная система фильтрации на базе регулярных выражений (Regex) очищает контент от чужих
-                        ссылок, водяных знаков и рекламы конкурентов в реальном времени. Ваш канал всегда выглядит чисто
-                        и уникально.</p>
+                    <h2>Ваш идеальный <span class="text-accent">цифровой двойник</span></h2>
+                    <p>Забудьте о рутинном копировании. Наш бот — это не просто скрипт, это ваша цифровая тень, которая
+                        никогда не спит, не просит зарплаты и не совершает ошибок. Он пересобирает каждый пост, очищая
+                        его от чужих следов и добавляя элементы "живого" присутствия.</p>
+                    <p>Эксклюзивная технология моментальной конвертации в "Кружочки" превращает сухой контент в личное
+                        сообщение от автора. Ваши подписчики будут уверены, что вы создаете этот контент сами, здесь и
+                        сейчас.</p>
                 </div>
                 <div class="info-image-box">
-                    <img src="images/video_conversion.png"
-                        alt="Prompt: A high-tech digital processing station, a regular video file being transformed into a glowing purple sphere (video note), particles of light, sleek dark UI interface elements, neon purple highlights.">
+                    <img src="images/digital_twin.png"
+                        alt="Prompt: A specialized retro-futuristic terminal screen showing a round video message (circle) in the center, dark theme, neon purple scanlines, silhouette of a demon in the background, cinematic lighting, synthwave vibe, 16:9.">
                 </div>
             </div>
         </section>
