Business Tone Overhaul: Implemented professional business-oriented content and enterprise visual prompts.

--- a/website/en/index.html
+++ b/website/en/index.html
@@ -71,33 +71,32 @@
         <section class="content-section">
             <div class="info-block">
                 <div class="info-text">
-                    <h2>Speed is Your Only <span class="text-accent">Real Currency</span></h2>
-                    <p>The Telegram business world doesn't forgive the slow. If you haven't posted viral content within
-                        5 seconds of the original source, you've already handed your audience to your competitors. In
-                        this race, it's not the smartest who wins, but the fastest.</p>
-                    <p>Content Scraper Premium is your unfair advantage in this endless dash. We built a tool that works
-                        at the edge of possibility, intercepting and adapting content instantly. While others are still
-                        configuring their scripts, you're already collecting views.</p>
+                    <h2>Infrastructure for <span class="text-accent">Scalable Media Business</span></h2>
+                    <p>In the current landscape of Telegram marketing, the advantage belongs to those who automate
+                        operational processes. Content Scraper Premium is a professional solution for creating and
+                        managing distributed channel networks with minimal overhead.</p>
+                    <p>Our system provides seamless real-time monitoring and content replication, allowing companies to
+                        focus on strategic growth and monetization while delegating technical routine to reliable
+                        software.</p>
                 </div>
                 <div class="info-image-box">
-                    <img src="../images/cloning_mirror.png"
-                        alt="Prompt: Stylized oni demon mask 3D render, glowing purple neon eyes, the mask is shattering into digital pixel shards that form new masks, dark void background, cyberpunk glitch aesthetic, 16:9, hyper-detailed.">
+                    <img src="../images/business_network.png"
+                        alt="Prompt: High-tech abstract 3D visualization of a global data network, glowing purple fiber optic lines, dark elegant background, sleek corporate tech aesthetic, clean lines, cinematic lighting, 16:9, 8k resolution.">
                 </div>
             </div>
 
             <div class="info-block reverse">
                 <div class="info-text">
-                    <h2>Your Ultimate <span class="text-accent">Digital Twin</span></h2>
-                    <p>Forget about routine copying. Our bot isn't just a script; it's your digital shadow that never
-                        sleeps, never asks for a salary, and never makes mistakes. It rebuilds every post, scrubbing it
-                        of traces and adding elements of "live" presence.</p>
-                    <p>Exclusive technology for instant conversion into "Video Notes" turns dry content into a personal
-                        message from the author. Your subscribers will believe you're creating this content yourself,
-                        right here, right now.</p>
+                    <h2>Precision Engineering in <span class="text-accent">Content Processing</span></h2>
+                    <p>We offer more than just data copying. Our technology stack includes intelligent filters and a
+                        proprietary media conversion system. Transforming standard video into Video Notes (Round Videos)
+                        ensures audience engagement through a native presence effect.</p>
+                    <p>Every message undergoes multi-level scrubbing and adaptation, guaranteeing brand integrity and
+                        the removal of competitor traces from your media infrastructure.</p>
                 </div>
                 <div class="info-image-box">
-                    <img src="../images/digital_twin.png"
-                        alt="Prompt: A specialized retro-futuristic terminal screen showing a round video message (circle) in the center, dark theme, neon purple scanlines, silhouette of a demon in the background, cinematic lighting, synthwave vibe, 16:9.">
+                    <img src="../images/content_optimization.png"
+                        alt="Prompt: Macro photography of a futuristic glass processor with glowing purple energy circuits inside, abstract digital transformation, depth of field, premium tech look, dark ambient lighting, 16:9.">
                 </div>
             </div>
         </section>
