--- a/website/index.html
+++ b/website/index.html
@@ -69,33 +69,33 @@
         <section class="content-section">
             <div class="info-block">
                 <div class="info-text">
-                    <h2>Скорость — это ваша единственная <span class="text-accent">валюта</span></h2>
-                    <p>Мир Telegram-бизнеса не прощает медлительности. Если вы не запостили горячий контент через 5
-                        секунд после первоисточника — вы уже отдали свою аудиторию конкурентам. В этой гонке выигрывает
-                        не тот, кто умнее, а тот, кто быстрее.</p>
-                    <p>Content Scraper Premium — это ваша фора в бесконечном забеге. Мы создали инструмент, который
-                        работает на грани возможного, перехватывая и адаптируя контент мгновенно. Пока другие
-                        настраивают свои скрипты, вы уже собираете просмотры.</p>
+                    <h2>Инфраструктура для <span class="text-accent">масштабируемого медиа-бизнеса</span></h2>
+                    <p>В современных реалиях Telegram-маркетинга преимущество получает тот, кто автоматизирует
+                        операционные процессы. Content Scraper Premium — это профессиональное решение для создания и
+                        управления распределенными сетями каналов с минимальными издержками.</p>
+                    <p>Наша система обеспечивает бесперебойный мониторинг и репликацию контента в режиме реального
+                        времени, позволяя компаниям фокусироваться на стратегическом развитии и монетизации, делегируя
+                        техническую рутину надежному ПО.</p>
                 </div>
                 <div class="info-image-box">
-                    <img src="images/cloning_mirror.png"
-                        alt="Prompt: Stylized oni demon mask 3D render, glowing purple neon eyes, the mask is shattering into digital pixel shards that form new masks, dark void background, cyberpunk glitch aesthetic, 16:9, hyper-detailed.">
+                    <img src="images/business_network.png"
+                        alt="Prompt: High-tech abstract 3D visualization of a global data network, glowing purple fiber optic lines, dark elegant background, sleek corporate tech aesthetic, clean lines, cinematic lighting, 16:9, 8k resolution.">
                 </div>
             </div>
 
             <div class="info-block reverse">
                 <div class="info-text">
-                    <h2>Ваш идеальный <span class="text-accent">цифровой двойник</span></h2>
-                    <p>Забудьте о рутинном копировании. Наш бот — это не просто скрипт, это ваша цифровая тень, которая
-                        никогда не спит, не просит зарплаты и не совершает ошибок. Он пересобирает каждый пост, очищая
-                        его от чужих следов и добавляя элементы "живого" присутствия.</p>
-                    <p>Эксклюзивная технология моментальной конвертации в "Кружочки" превращает сухой контент в личное
-                        сообщение от автора. Ваши подписчики будут уверены, что вы создаете этот контент сами, здесь и
-                        сейчас.</p>
+                    <h2>Прецизионная инженерия <span class="text-accent">обработки контента</span></h2>
+                    <p>Мы предлагаем больше, чем просто копирование данных. Наш стек технологий включает
+                        интеллектуальные фильтры и проприетарную систему конвертации медиа. Преобразование обычного
+                        видео в формат Video Notes (Кружочки) обеспечивает лояльность аудитории через эффект нативного
+                        присутствия.</p>
+                    <p>Каждое сообщение проходит через многоуровневую очистку и адаптацию, что гарантирует чистоту
+                        вашего бренда и отсутствие следов присутствия конкурентов в вашей медиа-инфраструктуре.</p>
                 </div>
                 <div class="info-image-box">
-                    <img src="images/digital_twin.png"
-                        alt="Prompt: A specialized retro-futuristic terminal screen showing a round video message (circle) in the center, dark theme, neon purple scanlines, silhouette of a demon in the background, cinematic lighting, synthwave vibe, 16:9.">
+                    <img src="images/content_optimization.png"
+                        alt="Prompt: Macro photography of a futuristic glass processor with glowing purple energy circuits inside, abstract digital transformation, depth of field, premium tech look, dark ambient lighting, 16:9.">
                 </div>
             </div>
         </section>
